tests/models/enum/unit/fail/default.rs
use dade::model;
#[model]
enum TestModel {
   #[field(default = 1)]
    Value
}
fn main() {}
