tests/models/enum/unit/fail/default.stderr
error: Only support alias term on the unit field.
 --> tests/models/enum/unit/fail/default.rs:5:5
  |
5 |     Value
  |     ^^^^^
